// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Class Reflection should compile abstract class: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: \`abstract\` AbstractClass

**Defined in**: [classes.ts:1](http://source-url)

## Extended by

- [\`DerivedClassA\`](DerivedClassA.md)
- [\`DerivedClassB\`](DerivedClassB.md)

## Constructors

### new AbstractClass()

> **new AbstractClass**(): [\`AbstractClass\`](AbstractClass.md)

#### Returns

[\`AbstractClass\`](AbstractClass.md)

## Properties

### abstractProp

> \`abstract\` **abstractProp**: \`string\`

**Defined in**: [classes.ts:1](http://source-url)

Comments for abstractProp

## Methods

### abstractMethod()

> \`abstract\` **abstractMethod**(): \`string\`

**Defined in**: [classes.ts:1](http://source-url)

Comments for abstractMethod

#### Returns

\`string\`
"
`;

exports[`Class Reflection should compile abstract class: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Class: \`abstract\` AbstractClass

**Defined in**: [classes.ts:1](http://source-url)

## Extended by

- [\`DerivedClassA\`](DerivedClassA.md)
- [\`DerivedClassB\`](DerivedClassB.md)

## Constructors

### new AbstractClass()

\`\`\`ts
new AbstractClass(): AbstractClass
\`\`\`

#### Returns

[\`AbstractClass\`](AbstractClass.md)

## Properties

| Property | Modifier | Type | Description |
| :------ | :------ | :------ | :------ |
| \`abstractProp\` | \`abstract\` | \`string\` | Comments for abstractProp |

## Methods

### abstractMethod()

\`\`\`ts
abstract abstractMethod(): string
\`\`\`

**Defined in**: [classes.ts:1](http://source-url)

Comments for abstractMethod

#### Returns

\`string\`
"
`;

exports[`Class Reflection should compile basic class: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: BasicClass

**Defined in**: [classes.ts:1](http://source-url)

Comments for BasicClass

## Constructors

### new BasicClass()

> **new BasicClass**(): [\`BasicClass\`](BasicClass.md)

#### Returns

[\`BasicClass\`](BasicClass.md)

## Properties

### prop

> **prop**: \`string\`

**Defined in**: [classes.ts:1](http://source-url)

Comments for prop

## Methods

### method()

> **method**(): \`string\`

**Defined in**: [classes.ts:1](http://source-url)

Comments for method

#### Returns

\`string\`
"
`;

exports[`Class Reflection should compile basic class: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Class: BasicClass

**Defined in**: [classes.ts:1](http://source-url)

Comments for BasicClass

## Constructors

### new BasicClass()

\`\`\`ts
new BasicClass(): BasicClass
\`\`\`

#### Returns

[\`BasicClass\`](BasicClass.md)

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| \`prop\` | \`string\` | Comments for prop |

## Methods

### method()

\`\`\`ts
method(): string
\`\`\`

**Defined in**: [classes.ts:1](http://source-url)

Comments for method

#### Returns

\`string\`
"
`;

exports[`Class Reflection should compile class with accessor keywords: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: ClassWithAccessorKeywords

**Defined in**: [classes.ts:1](http://source-url)

## Constructors

### new ClassWithAccessorKeywords()

> **new ClassWithAccessorKeywords**(): [\`ClassWithAccessorKeywords\`](ClassWithAccessorKeywords.md)

#### Returns

[\`ClassWithAccessorKeywords\`](ClassWithAccessorKeywords.md)

## Accessors

### accessor1

Accessor comments

#### Example

\`\`\`ts
const x = 1;
\`\`\`

**Defined in**: [classes.ts:1](http://source-url)

***

### accessor2

Accessor comments

#### Remarks

Remark comments

**Defined in**: [classes.ts:1](http://source-url)

***

### accessor3

Accessor comments

**Defined in**: [classes.ts:1](http://source-url)
"
`;

exports[`Class Reflection should compile class with accessors: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: ClassWithAccessors

**Defined in**: [classes.ts:1](http://source-url)

Comments for ClassWithAccessors

## Constructors

### new ClassWithAccessors()

> **new ClassWithAccessors**(): [\`ClassWithAccessors\`](ClassWithAccessors.md)

#### Returns

[\`ClassWithAccessors\`](ClassWithAccessors.md)

## Properties

### privateProp

> \`private\` **privateProp**: \`string\`

**Defined in**: [classes.ts:1](http://source-url)

## Accessors

### accessor

#### Get Signature

> **get** **accessor**(): \`string\`

Comments for getter

##### Returns

\`string\`

#### Set Signature

> **set** **accessor**(\`value\`): \`void\`

Comments for setter

##### Parameters

###### value

\`string\`

Param comments

##### Returns

\`void\`

**Defined in**: [classes.ts:1](http://source-url)

***

### noGetter

#### Set Signature

> **set** **noGetter**(\`x\`): \`void\`

##### Parameters

###### x

\`string\`

##### Returns

\`void\`

**Defined in**: [classes.ts:1](http://source-url)

***

### noSetter

#### Get Signature

> **get** **noSetter**(): \`string\`

##### Returns

\`string\`

**Defined in**: [classes.ts:1](http://source-url)
"
`;

exports[`Class Reflection should compile class with accessors: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Class: ClassWithAccessors

**Defined in**: [classes.ts:1](http://source-url)

Comments for ClassWithAccessors

## Constructors

### new ClassWithAccessors()

\`\`\`ts
new ClassWithAccessors(): ClassWithAccessors
\`\`\`

#### Returns

[\`ClassWithAccessors\`](ClassWithAccessors.md)

## Properties

| Property | Modifier | Type |
| :------ | :------ | :------ |
| \`privateProp\` | \`private\` | \`string\` |

## Accessors

### accessor

#### Get Signature

\`\`\`ts
get accessor(): string
\`\`\`

Comments for getter

##### Returns

\`string\`

#### Set Signature

\`\`\`ts
set accessor(value: string): void
\`\`\`

Comments for setter

##### Parameters

| Parameter | Type | Description |
| :------ | :------ | :------ |
| \`value\` | \`string\` | Param comments |

##### Returns

\`void\`

**Defined in**: [classes.ts:1](http://source-url)

***

### noGetter

#### Set Signature

\`\`\`ts
set noGetter(x: string): void
\`\`\`

##### Parameters

| Parameter | Type |
| :------ | :------ |
| \`x\` | \`string\` |

##### Returns

\`void\`

**Defined in**: [classes.ts:1](http://source-url)

***

### noSetter

#### Get Signature

\`\`\`ts
get noSetter(): string
\`\`\`

##### Returns

\`string\`

**Defined in**: [classes.ts:1](http://source-url)
"
`;

exports[`Class Reflection should compile class with complex props: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: ClassWithComplexProps

**Defined in**: [classes.ts:1](http://source-url)

Comments for ClassWithComplexProps

## Constructors

### new ClassWithComplexProps()

> **new ClassWithComplexProps**(): [\`ClassWithComplexProps\`](ClassWithComplexProps.md)

#### Returns

[\`ClassWithComplexProps\`](ClassWithComplexProps.md)

## Properties

### objecLiteralProp

> **objecLiteralProp**: \`object\`

**Defined in**: [classes.ts:1](http://source-url)

#### someFunction()

> **someFunction**: (\`a\`) => \`string\`

Comments for someFunction

##### Parameters

###### a

\`string\`

##### Returns

\`string\`

#### someProp

> **someProp**: \`string\` = \`'someProp'\`

Comments for someProp
"
`;

exports[`Class Reflection should compile class with complex props: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Class: ClassWithComplexProps

**Defined in**: [classes.ts:1](http://source-url)

Comments for ClassWithComplexProps

## Constructors

### new ClassWithComplexProps()

\`\`\`ts
new ClassWithComplexProps(): ClassWithComplexProps
\`\`\`

#### Returns

[\`ClassWithComplexProps\`](ClassWithComplexProps.md)

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| \`objecLiteralProp\` | \`object\` | - |
| \`objecLiteralProp.someFunction\` | (\`a\`: \`string\`) => \`string\` | Comments for someFunction |
| \`objecLiteralProp.someProp\` | \`string\` | Comments for someProp |
"
`;

exports[`Class Reflection should compile class with constructor overloads: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: ClassWithConstructorOverloads

**Defined in**: [classes.ts:1](http://source-url)

Comments for ClassWithConstructorOverloads

## Constructors

### new ClassWithConstructorOverloads()

> **new ClassWithConstructorOverloads**(\`x\`, \`y\`): [\`ClassWithConstructorOverloads\`](ClassWithConstructorOverloads.md)

**Defined in**: [classes.ts:1](http://source-url)

#### Parameters

##### x

\`number\`

Comments for x number

##### y

\`string\`

#### Returns

[\`ClassWithConstructorOverloads\`](ClassWithConstructorOverloads.md)

### new ClassWithConstructorOverloads()

> **new ClassWithConstructorOverloads**(\`x\`): [\`ClassWithConstructorOverloads\`](ClassWithConstructorOverloads.md)

**Defined in**: [classes.ts:1](http://source-url)

#### Parameters

##### x

\`string\`

Comments for x string

#### Returns

[\`ClassWithConstructorOverloads\`](ClassWithConstructorOverloads.md)

### new ClassWithConstructorOverloads()

> **new ClassWithConstructorOverloads**(\`s\`): [\`ClassWithConstructorOverloads\`](ClassWithConstructorOverloads.md)

**Defined in**: [classes.ts:1](http://source-url)

#### Parameters

##### s

\`string\`

#### Returns

[\`ClassWithConstructorOverloads\`](ClassWithConstructorOverloads.md)
"
`;

exports[`Class Reflection should compile class with constructor overloads: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Class: ClassWithConstructorOverloads

**Defined in**: [classes.ts:1](http://source-url)

Comments for ClassWithConstructorOverloads

## Constructors

### new ClassWithConstructorOverloads()

\`\`\`ts
new ClassWithConstructorOverloads(x: number, y: string): ClassWithConstructorOverloads
\`\`\`

**Defined in**: [classes.ts:1](http://source-url)

#### Parameters

| Parameter | Type | Description |
| :------ | :------ | :------ |
| \`x\` | \`number\` | Comments for x number |
| \`y\` | \`string\` |  |

#### Returns

[\`ClassWithConstructorOverloads\`](ClassWithConstructorOverloads.md)

### new ClassWithConstructorOverloads()

\`\`\`ts
new ClassWithConstructorOverloads(x: string): ClassWithConstructorOverloads
\`\`\`

**Defined in**: [classes.ts:1](http://source-url)

#### Parameters

| Parameter | Type | Description |
| :------ | :------ | :------ |
| \`x\` | \`string\` | Comments for x string |

#### Returns

[\`ClassWithConstructorOverloads\`](ClassWithConstructorOverloads.md)

### new ClassWithConstructorOverloads()

\`\`\`ts
new ClassWithConstructorOverloads(s: string): ClassWithConstructorOverloads
\`\`\`

**Defined in**: [classes.ts:1](http://source-url)

#### Parameters

| Parameter | Type |
| :------ | :------ |
| \`s\` | \`string\` |

#### Returns

[\`ClassWithConstructorOverloads\`](ClassWithConstructorOverloads.md)
"
`;

exports[`Class Reflection should compile class with flags: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: ClassWithFlags

**Defined in**: [classes.ts:1](http://source-url)

Comment for ClassWithFlags

## Constructors

### new ClassWithFlags()

> **new ClassWithFlags**(): [\`ClassWithFlags\`](ClassWithFlags.md)

#### Returns

[\`ClassWithFlags\`](ClassWithFlags.md)

## Properties

### expermintalProp

> **expermintalProp**: \`string\`

**Defined in**: [classes.ts:1](http://source-url)

**\`Experimental\`**

***

### internalProp

> \`private\` **internalProp**: \`string\`

**Defined in**: [classes.ts:1](http://source-url)

**\`Internal\`**

## Methods

### expermintalMethod()

> **expermintalMethod**(): \`void\`

**Defined in**: [classes.ts:1](http://source-url)

**\`Experimental\`**

#### Returns

\`void\`

***

### internalMethod()

> \`protected\` **internalMethod**(): \`void\`

**Defined in**: [classes.ts:1](http://source-url)

**\`Internal\`**

#### Returns

\`void\`
"
`;

exports[`Class Reflection should compile class with flags: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Class: ClassWithFlags

**Defined in**: [classes.ts:1](http://source-url)

Comment for ClassWithFlags

## Constructors

### new ClassWithFlags()

\`\`\`ts
new ClassWithFlags(): ClassWithFlags
\`\`\`

#### Returns

[\`ClassWithFlags\`](ClassWithFlags.md)

## Properties

| Property | Modifier | Type | Description |
| :------ | :------ | :------ | :------ |
| \`expermintalProp\` | \`public\` | \`string\` | **\`Experimental\`** |
| \`internalProp\` | \`private\` | \`string\` | **\`Internal\`** |

## Methods

### expermintalMethod()

\`\`\`ts
expermintalMethod(): void
\`\`\`

**Defined in**: [classes.ts:1](http://source-url)

**\`Experimental\`**

#### Returns

\`void\`

***

### internalMethod()

\`\`\`ts
protected internalMethod(): void
\`\`\`

**Defined in**: [classes.ts:1](http://source-url)

**\`Internal\`**

#### Returns

\`void\`
"
`;

exports[`Class Reflection should compile class with modifiers: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: \`abstract\` ClassWithModifiers

**Defined in**: [classes.ts:1](http://source-url)

Comments for ClassWithModifiers

## Constructors

### new ClassWithModifiers()

> **new ClassWithModifiers**(): [\`ClassWithModifiers\`](ClassWithModifiers.md)

#### Returns

[\`ClassWithModifiers\`](ClassWithModifiers.md)

## Properties

### privateProp

> \`private\` **privateProp**: \`string\`

**Defined in**: [classes.ts:1](http://source-url)

Comments for privateProp

***

### protectedProp

> \`protected\` **protectedProp**: \`string\`

**Defined in**: [classes.ts:1](http://source-url)

Comments for protectedProp

***

### publicPropWithDefault

> **publicPropWithDefault**: \`string\` = \`'propWithDefault'\`

**Defined in**: [classes.ts:1](http://source-url)

Comments for propWithDefault

***

### readonlyProp

> \`readonly\` **readonlyProp**: \`string\`

**Defined in**: [classes.ts:1](http://source-url)

Comments for abstractProperty

***

### staticProp

> \`static\` **staticProp**: \`string\`

**Defined in**: [classes.ts:1](http://source-url)

Comments for staticProp

## Methods

### privateMethod()

> \`private\` **privateMethod**(): \`void\`

**Defined in**: [classes.ts:1](http://source-url)

Comment for privateMethod

#### Returns

\`void\`

***

### publicMethod()

> **publicMethod**(): \`void\`

**Defined in**: [classes.ts:1](http://source-url)

Comment for publicMethod

#### Returns

\`void\`

***

### staticMethod()

> \`static\` **staticMethod**(): \`void\`

**Defined in**: [classes.ts:1](http://source-url)

Comment for staticMethod

#### Returns

\`void\`
"
`;

exports[`Class Reflection should compile class with modifiers: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Class: \`abstract\` ClassWithModifiers

**Defined in**: [classes.ts:1](http://source-url)

Comments for ClassWithModifiers

## Constructors

### new ClassWithModifiers()

\`\`\`ts
new ClassWithModifiers(): ClassWithModifiers
\`\`\`

#### Returns

[\`ClassWithModifiers\`](ClassWithModifiers.md)

## Properties

| Property | Modifier | Type | Default value | Description |
| :------ | :------ | :------ | :------ | :------ |
| \`privateProp\` | \`private\` | \`string\` | \`undefined\` | Comments for privateProp |
| \`protectedProp\` | \`protected\` | \`string\` | \`undefined\` | Comments for protectedProp |
| \`publicPropWithDefault\` | \`public\` | \`string\` | \`'propWithDefault'\` | Comments for propWithDefault |
| \`readonlyProp\` | \`readonly\` | \`string\` | \`undefined\` | Comments for abstractProperty |
| \`staticProp\` | \`static\` | \`string\` | \`undefined\` | Comments for staticProp |

## Methods

### privateMethod()

\`\`\`ts
private privateMethod(): void
\`\`\`

**Defined in**: [classes.ts:1](http://source-url)

Comment for privateMethod

#### Returns

\`void\`

***

### publicMethod()

\`\`\`ts
publicMethod(): void
\`\`\`

**Defined in**: [classes.ts:1](http://source-url)

Comment for publicMethod

#### Returns

\`void\`

***

### staticMethod()

\`\`\`ts
static staticMethod(): void
\`\`\`

**Defined in**: [classes.ts:1](http://source-url)

Comment for staticMethod

#### Returns

\`void\`
"
`;

exports[`Class Reflection should compile class with prop categories: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: ClassWithPropCategories

**Defined in**: [classes.ts:1](http://source-url)

## Constructors

### new ClassWithPropCategories()

> **new ClassWithPropCategories**(\`opts\`): [\`ClassWithPropCategories\`](ClassWithPropCategories.md)

**Defined in**: [classes.ts:1](http://source-url)

#### Parameters

##### opts

###### a

\`string\`

###### b

\`string\`

#### Returns

[\`ClassWithPropCategories\`](ClassWithPropCategories.md)

## CatA

### prop1

> **prop1**: \`string\`

**Defined in**: [classes.ts:1](http://source-url)

## CatB

### prop2

> **prop2**: \`string\`

**Defined in**: [classes.ts:1](http://source-url)

## Other

### method1()

> **method1**(): \`void\`

**Defined in**: [classes.ts:1](http://source-url)

#### Returns

\`void\`

***

### method2()

> **method2**(): \`void\`

**Defined in**: [classes.ts:1](http://source-url)

#### Returns

\`void\`
"
`;

exports[`Class Reflection should compile class with simple props: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: ClassWithSimpleProps

**Defined in**: [classes.ts:1](http://source-url)

Comments for ClassWithSimpleProps

## Constructors

### new ClassWithSimpleProps()

> **new ClassWithSimpleProps**(): [\`ClassWithSimpleProps\`](ClassWithSimpleProps.md)

#### Returns

[\`ClassWithSimpleProps\`](ClassWithSimpleProps.md)

## Properties

### propA

> **propA**: \`string\` = \`'propAValue'\`

**Defined in**: [classes.ts:1](http://source-url)

Comments for propA

***

### propB

> **propB**: \`string\` = \`'propBValue'\`

**Defined in**: [classes.ts:1](http://source-url)

Comments for propB

#### Default Value

\`\`\`ts
'propBDefaultValue'
\`\`\`

***

### propC

> **propC**: \`string\`

**Defined in**: [classes.ts:1](http://source-url)

Comments for propB
on two lines

#### Default Value

\`\`\`ts
'propCDefaultValue'
\`\`\`

***

### propD

> **propD**: \`string\`

**Defined in**: [classes.ts:1](http://source-url)

Comments for propE
"
`;

exports[`Class Reflection should compile class with simple props: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Class: ClassWithSimpleProps

**Defined in**: [classes.ts:1](http://source-url)

Comments for ClassWithSimpleProps

## Constructors

### new ClassWithSimpleProps()

\`\`\`ts
new ClassWithSimpleProps(): ClassWithSimpleProps
\`\`\`

#### Returns

[\`ClassWithSimpleProps\`](ClassWithSimpleProps.md)

## Properties

| Property | Type | Default value | Description |
| :------ | :------ | :------ | :------ |
| \`propA\` | \`string\` | \`'propAValue'\` | Comments for propA |
| \`propB\` | \`string\` | \`'propBDefaultValue'\` | Comments for propB |
| \`propC\` | \`string\` | \`'propCDefaultValue'\` | Comments for propB on two lines |
| \`propD\` | \`string\` | \`undefined\` | Comments for propE |
"
`;

exports[`Class Reflection should compile class with symbols: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: ClassWithSymbols

**Defined in**: [classes.ts:1](http://source-url)

## Constructors

### new ClassWithSymbols()

> **new ClassWithSymbols**(): [\`ClassWithSymbols\`](ClassWithSymbols.md)

#### Returns

[\`ClassWithSymbols\`](ClassWithSymbols.md)

## Properties

### \\[symbolConst\\]()?

> \`static\` \`optional\` **\\[symbolConst\\]**: () => \`void\`

**Defined in**: [classes.ts:1](http://source-url)

#### Returns

\`void\`

## Methods

### \\[dispose\\]()

> **\\[dispose\\]**(): \`void\`

**Defined in**: [classes.ts:1](http://source-url)

#### Returns

\`void\`
"
`;

exports[`Class Reflection should compile class with type parameters: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: ClassWithTypeParameters\\<A, B, C\\>

**Defined in**: [classes.ts:1](http://source-url)

Comments for ClassWithTypeParameters

## Type Parameters

• **A**

• **B** *extends* \`string\`

Comments for param B

• **C** = \`boolean\`

Comments for param C

## Constructors

### new ClassWithTypeParameters()

> **new ClassWithTypeParameters**\\<\`A\`, \`B\`, \`C\`\\>(): [\`ClassWithTypeParameters\`](ClassWithTypeParameters.md)\\<\`A\`, \`B\`, \`C\`\\>

#### Returns

[\`ClassWithTypeParameters\`](ClassWithTypeParameters.md)\\<\`A\`, \`B\`, \`C\`\\>
"
`;

exports[`Class Reflection should compile class with type parameters: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Class: ClassWithTypeParameters\\<A, B, C\\>

**Defined in**: [classes.ts:1](http://source-url)

Comments for ClassWithTypeParameters

## Type Parameters

| Type Parameter | Default type | Description |
| :------ | :------ | :------ |
| \`A\` | - | - |
| \`B\` *extends* \`string\` | - | Comments for param B |
| \`C\` | \`boolean\` | Comments for param C |

## Constructors

### new ClassWithTypeParameters()

\`\`\`ts
new ClassWithTypeParameters<A, B, C>(): ClassWithTypeParameters<A, B, C>
\`\`\`

#### Returns

[\`ClassWithTypeParameters\`](ClassWithTypeParameters.md)\\<\`A\`, \`B\`, \`C\`\\>
"
`;

exports[`Class Reflection should compile class without prop categories: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: ClassWithoutPropCategories

**Defined in**: [classes.ts:1](http://source-url)

## Constructors

### new ClassWithoutPropCategories()

> **new ClassWithoutPropCategories**(\`opts\`): [\`ClassWithoutPropCategories\`](ClassWithoutPropCategories.md)

**Defined in**: [classes.ts:1](http://source-url)

#### Parameters

##### opts

###### a

\`string\`

###### b

\`string\`

#### Returns

[\`ClassWithoutPropCategories\`](ClassWithoutPropCategories.md)

## Properties

### prop1

> **prop1**: \`string\`

**Defined in**: [classes.ts:1](http://source-url)

***

### prop2

> **prop2**: \`string\`

**Defined in**: [classes.ts:1](http://source-url)

## Methods

### method1()

> **method1**(): \`void\`

**Defined in**: [classes.ts:1](http://source-url)

#### Returns

\`void\`

***

### method2()

> **method2**(): \`void\`

**Defined in**: [classes.ts:1](http://source-url)

#### Returns

\`void\`
"
`;

exports[`Class Reflection should compile derived class: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: DerivedClassA

**Defined in**: [classes.ts:1](http://source-url)

Comments for DerivedClassA

## Extends

- [\`AbstractClass\`](AbstractClass.md)

## Constructors

### new DerivedClassA()

> **new DerivedClassA**(): [\`DerivedClassA\`](DerivedClassA.md)

#### Returns

[\`DerivedClassA\`](DerivedClassA.md)

#### Inherited from

[\`AbstractClass\`](AbstractClass.md).[\`constructor\`](AbstractClass.md#constructors)

## Properties

### abstractProp

> **abstractProp**: \`string\` = \`'abstractProp'\`

**Defined in**: [classes.ts:1](http://source-url)

Comments for abstractProp

#### Overrides

[\`AbstractClass\`](AbstractClass.md).[\`abstractProp\`](AbstractClass.md#abstractprop)

***

### derivedProp

> **derivedProp**: \`string\`

**Defined in**: [classes.ts:1](http://source-url)

## Methods

### abstractMethod()

> **abstractMethod**(): \`string\`

**Defined in**: [classes.ts:1](http://source-url)

Comments for abstractMethod

#### Returns

\`string\`

#### Overrides

[\`AbstractClass\`](AbstractClass.md).[\`abstractMethod\`](AbstractClass.md#abstractmethod)

***

### derivedMethod()

> **derivedMethod**(): \`string\`

**Defined in**: [classes.ts:1](http://source-url)

#### Returns

\`string\`
"
`;

exports[`Class Reflection should compile derived class: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Class: DerivedClassA

**Defined in**: [classes.ts:1](http://source-url)

Comments for DerivedClassA

## Extends

- [\`AbstractClass\`](AbstractClass.md)

## Constructors

### new DerivedClassA()

\`\`\`ts
new DerivedClassA(): DerivedClassA
\`\`\`

#### Returns

[\`DerivedClassA\`](DerivedClassA.md)

#### Inherited from

[\`AbstractClass\`](AbstractClass.md).[\`constructor\`](AbstractClass.md#constructors)

## Properties

| Property | Type | Default value | Description | Overrides |
| :------ | :------ | :------ | :------ | :------ |
| \`abstractProp\` | \`string\` | \`'abstractProp'\` | Comments for abstractProp | [\`AbstractClass\`](AbstractClass.md).\`abstractProp\` |
| \`derivedProp\` | \`string\` | \`undefined\` | - | - |

## Methods

### abstractMethod()

\`\`\`ts
abstractMethod(): string
\`\`\`

**Defined in**: [classes.ts:1](http://source-url)

Comments for abstractMethod

#### Returns

\`string\`

#### Overrides

[\`AbstractClass\`](AbstractClass.md).[\`abstractMethod\`](AbstractClass.md#abstractmethod)

***

### derivedMethod()

\`\`\`ts
derivedMethod(): string
\`\`\`

**Defined in**: [classes.ts:1](http://source-url)

#### Returns

\`string\`
"
`;

exports[`Class Reflection should compile disposable class: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: DisposableClass

**Defined in**: [classes.ts:1](http://source-url)

## Implements

- \`Disposable\`

## Constructors

### new DisposableClass()

> **new DisposableClass**(): [\`DisposableClass\`](DisposableClass.md)

#### Returns

[\`DisposableClass\`](DisposableClass.md)

## Methods

### \\[dispose\\]()

> **\\[dispose\\]**(): \`void\`

**Defined in**: [classes.ts:1](http://source-url)

#### Returns

\`void\`

#### Implementation of

\`Disposable.[dispose]\`
"
`;

exports[`Class Reflection should compile hierarchy for BaseClass: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: BaseClass

**Defined in**: [classes.ts:1](http://source-url)

## Extended by

- [\`ChildClassA\`](ChildClassA.md)
- [\`ChildClassB\`](ChildClassB.md)

## Constructors

### new BaseClass()

> **new BaseClass**(): [\`BaseClass\`](BaseClass.md)

#### Returns

[\`BaseClass\`](BaseClass.md)
"
`;

exports[`Class Reflection should compile hierarchy for ChildClassA: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: ChildClassA

**Defined in**: [classes.ts:1](http://source-url)

## Extends

- [\`BaseClass\`](BaseClass.md)

## Extended by

- [\`GrandChildClassA\`](GrandChildClassA.md)
- [\`GrandChildClassB\`](GrandChildClassB.md)

## Constructors

### new ChildClassA()

> **new ChildClassA**(): [\`ChildClassA\`](ChildClassA.md)

#### Returns

[\`ChildClassA\`](ChildClassA.md)

#### Inherited from

[\`BaseClass\`](BaseClass.md).[\`constructor\`](BaseClass.md#constructors)
"
`;

exports[`Class Reflection should compile hierarchy for GrandChildClassA: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: GrandChildClassA

**Defined in**: [classes.ts:1](http://source-url)

## Extends

- [\`ChildClassA\`](ChildClassA.md)

## Constructors

### new GrandChildClassA()

> **new GrandChildClassA**(): [\`GrandChildClassA\`](GrandChildClassA.md)

#### Returns

[\`GrandChildClassA\`](GrandChildClassA.md)

#### Inherited from

[\`ChildClassA\`](ChildClassA.md).[\`constructor\`](ChildClassA.md#constructors)
"
`;
